--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M5</version>
+                    <configuration>
+                        <excludes>
+                            <!-- classes in a package whose last segment is named browserstack -->
+                            <exclude>**/browserstack/*.java</exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
